# rentradar

./: .env.example  .gitignore  Procfile  pyproject.toml  railway.toml
.github/workflows/: ci.yml
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py
apps/api/rentradar/: __init__.py  config.py  database.py  main.py
apps/api/rentradar/models/: __init__.py  building_permit.py  listing.py  listing_source.py  notification.py  price_history.py  rent_stabilized.py  saved_search.py  user.py
apps/api/rentradar/routers/: auth.py  health.py  listings.py  notifications.py  saved_searches.py  sse.py
apps/web/: package-lock.json  package.json  vercel.json
apps/web/public/: firebase-messaging-sw.js
apps/web/src/app/: layout.tsx  providers.tsx
apps/web/src/app/listings/: listings-view.tsx  page.tsx
apps/web/src/app/listings/[id]/: page.tsx  (+1 more)
apps/web/src/app/notifications/: notifications-view.tsx  page.tsx
apps/web/src/app/searches/: page.tsx  searches-view.tsx
apps/web/src/components/: create-search-dialog.tsx  filter-sidebar.tsx  listing-card.tsx  listing-grid.tsx  notification-toast-provider.tsx  pagination.tsx  price-chart.tsx
apps/web/src/hooks/: use-push-notifications.ts  use-sse.ts
apps/web/src/lib/: api.ts  auth-context.tsx  firebase.ts  types.ts
data/: ingest_hcr.py
infra/: Dockerfile.api  Dockerfile.worker  docker-compose.yml
tests/fixtures/: craigslist_search.html  rentcom_search.html  streeteasy_search.html  zillow_search.html  zumper_search.html
tests/unit/: test_api_endpoints.py  test_base_scraper.py  test_craigslist.py  test_health.py  test_models.py  test_normalization.py  test_permits.py  test_rent_stabilized.py  test_rentcom.py  test_schemas.py  test_scoring.py  test_streeteasy.py  test_zillow.py  test_zumper.py
workers/: pyproject.toml
workers/rentradar_workers/: __init__.py  celery_app.py
workers/rentradar_workers/normalization/: dedup.py  geocoder.py  pipeline.py
workers/rentradar_workers/notifications/: __init__.py  email.py  engine.py  price_drop.py  push.py  sse.py  tasks.py
workers/rentradar_workers/permits/: attom_client.py  tasks.py  tracker.py
workers/rentradar_workers/scoring/: comps.py  quality.py  rent_stabilized.py  tasks.py  train_rent_stabilized.py  train_undervalue.py  undervalue.py
workers/rentradar_workers/scrapers/: base.py  craigslist.py  health.py  rentcom.py  streeteasy.py  tasks.py  zillow.py  zumper.py
