[project]
name = "rentradar"
version = "0.1.0"
description = "Rental Intelligence Platform — aggregates, scores, and alerts on NYC rental listings"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "rentradar-api",
    "rentradar-common",
]

[tool.uv.sources]
rentradar-api = { workspace = true }
rentradar-common = { workspace = true }

[tool.uv.workspace]
members = ["apps/api", "workers", "packages/rentradar_common"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
