[project]
name = "rentradar-workers"
version = "0.1.0"
description = "RentRadar Celery workers — scrapers, scoring, notifications"
requires-python = ">=3.11"
dependencies = [
    "celery[redis]>=5.3",
    "redis>=5.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "geoalchemy2>=0.14",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "playwright>=1.40",
    "selenium>=4.15",
    "selenium-stealth>=1.0.6",
    "webdriver-manager>=4.0",
    "polars>=0.20",
    "scikit-learn>=1.4",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "tenacity>=8.2",
    "rentradar-common",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rentradar_workers"]
